--- a/assignment/public/partials/list/full-list.html
+++ b/assignment/public/partials/list/full-list.html
@@ -1,20 +1,32 @@
-<h3 class="">Full list</h3>
-
+<h3 class="">
+    Full list</h3>
+<div class="table-responsive">
 <table class="table table-hover table-striped">
     <thead>
         <tr>
             <td>Name</td>
             <td> Estimated Earnings </td>
-            <td> Child Companies </td>
+            <!--<td> Child Companies </td>-->
         </tr>
     </thead>
     <tbody>
 
-    <tr class="full-list" ui-sref="edit({id: task._id})" ng-repeat="task in fl.tasks">
-        <td>{{ task.name }}</td>
-        <td>{{ fl.getEarnings(task.earnings)}}</td>
-        <td>{{ fl.getChildren(task.childCompanies)}}</td>
-    </tr>
+        <tr  ng-repeat="task in fl.tasks">
+            <td>{{ task.name }}</td>
+           <!--  <td>{{ task.childCompanies.name }}</td>-->
+            <td>{{ fl.getEarnings(task.earnings)}}</td>
+           <!-- <td>{{ fl.getChildren(task.childCompanies)}}</td>-->
+           <td  class="text-primary" ui-sref="edit({id: task._id})">Update/Delete</td>
+        </tr>
 
     </tbody>
-</table>  
+</table>
+</div>
+ 
+
+<!--
+<select class="form-control input-sm" name="select"> Supplement an id here instead of using 'name'
+    <option value="">---Select child company---</option>
+    <option ng-repeat="task in fl.tasks" value="task._id">{{task.name}}</option> 
+</select>
+-->
